--- a/frontend/app/src/main/res/layout/activity_chat.xml
+++ b/frontend/app/src/main/res/layout/activity_chat.xml
@@ -7,24 +7,25 @@ android:layout_height="match_parent"
 tools:context=".ui.social.ChatActivity">
 
 
-<androidx.recyclerview.widget.RecyclerView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/RecyclerView"
-    android:layout_above="@id/messageEdit"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/RecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/messageEdit" />
 
-<EditText
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/edittext_design"
-    android:padding="8dp"
-    android:hint="Message..."
-    android:textSize="16sp"
-    android:layout_toStartOf="@id/sendBtn"
-    android:layout_alignParentBottom="true"
-    android:layout_marginStart="16dp"
-    android:layout_marginBottom="16dp"
-    android:id="@+id/messageEdit" />
+    <EditText
+        android:id="@+id/messageEdit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="20dp"
+        android:layout_toStartOf="@id/sendBtn"
+        android:background="@drawable/edittext_design"
+        android:hint="Message..."
+        android:padding="8dp"
+        android:textSize="16sp" />
 
     <Button
         android:id="@+id/sendBtn"
