--- a/frontend/app/src/main/res/layout/activity_ai_prediction.xml
+++ b/frontend/app/src/main/res/layout/activity_ai_prediction.xml
@@ -10,7 +10,7 @@
         android:id="@+id/ai_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:text="AI Prediction"
         android:textSize="32dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -19,48 +19,69 @@
 
     <TextView
         android:id="@+id/ai_description"
-        android:layout_width="385dp"
-        android:layout_height="183dp"
-        android:layout_marginTop="40dp"
-        android:text="This is our app's AI recommendation for your portfolio. Our predictions are powered by AI and machine learning and are tailored based on your personal risk tolerance. To change your risk tolerance simply move the slider below. Once you change the risk tolerance please give our app a moment to update it's prediction. The default risk tolerance is 50."
+        android:layout_width="388dp"
+        android:layout_height="254dp"
+        android:layout_marginTop="16dp"
+        android:text="This is our app's AI recommendation for your portfolio. Our predictions are powered by AI and machine learning and are tailored based on your personal risk tolerance and investment aggressiveness.\n Higher risk tolerance: less likely to sell on a low predicted price.\n Lower investment aggressiveness: more likely to buy when the predicted price is larger than today's price.
+        To change these values simply move the slider below. Once you change the risk tolerance please give our app a moment to update it's prediction."
         android:textSize="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/seekBar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.615"
+        app:layout_constraintHorizontal_bias="0.695"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ai_title"
-        app:layout_constraintVertical_bias="0.055" />
+        app:layout_constraintTop_toBottomOf="@+id/ai_title" />
 
     <SeekBar
         android:id="@+id/seekBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="64dp"
+        android:layout_marginTop="16dp"
         android:max="100"
         android:min="0"
         android:progress="50"
-        app:layout_constraintBottom_toTopOf="@+id/ai_results"
+        app:layout_constraintTop_toBottomOf="@+id/seekBarTitle"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <SeekBar
+        android:id="@+id/seekBarAgg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:max="100"
+        android:min="0"
+        android:progress="50"
+        app:layout_constraintTop_toBottomOf="@+id/seekBarTitleAgg"
         tools:layout_editor_absoluteX="0dp" />
 
     <TextView
         android:id="@+id/seekBarTitle"
-        android:layout_width="187dp"
-        android:layout_height="27dp"
-        android:text="Risk Tolerance: 50"
-        app:layout_constraintBottom_toTopOf="@+id/seekBar"
+        android:layout_width="233dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="16dp"
+        android:text="Risk Tolerance: 50%"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.513"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ai_description" />
 
     <TextView
+        android:id="@+id/seekBarTitleAgg"
+        android:layout_width="233dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="16dp"
+        android:text="Investment Aggressiveness Tolerance: 50%"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/seekBar" />
+
+    <TextView
         android:id="@+id/ai_results"
-        android:layout_width="412dp"
-        android:layout_height="81dp"
-        android:layout_marginBottom="100dp"
+        android:layout_width="392dp"
+        android:layout_height="75dp"
+        android:layout_marginBottom="52dp"
         android:text="temp"
         android:textSize="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.157"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
