--- a/frontend/app/src/main/res/layout/activity_login.xml
+++ b/frontend/app/src/main/res/layout/activity_login.xml
@@ -15,7 +15,7 @@
         android:id="@+id/first_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="32dp"
         android:hint="@string/prompt_first_name"
         android:inputType="textPersonName"
         android:selectAllOnFocus="true"
@@ -81,13 +81,23 @@
 
     <TextView
         android:id="@+id/tolerance_text"
-        android:layout_width="132dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="189dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="32dp"
         android:text="Current risk tolerance (%): 50"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/username" />
+
+    <TextView
+        android:id="@+id/aggressiveness_text"
+        android:layout_width="189dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="32dp"
+        android:text="Current investment aggressiveness (%): 50"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/seekBarLogin" />
 
     <SeekBar
         android:id="@+id/seekBarLogin"
@@ -101,18 +111,30 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tolerance_text" />
 
+    <SeekBar
+        android:id="@+id/seekBarLoginAgg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:max="100"
+        android:min="0"
+        android:progress="50"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/aggressiveness_text" />
+
     <Button
         android:id="@+id/login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
-        android:layout_marginBottom="64dp"
+        android:layout_marginBottom="32dp"
         android:enabled="false"
         android:text="@string/action_register"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/seekBarLogin" />
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ProgressBar
         android:id="@+id/loading"
